# QR-validator

./: =1.2.2  LICENSE.md  README.md  pyproject.toml  requirements1.txt
qr_validator/: QR-Validator.py  __main__.py  dance.py  requirements.txt
