[tool.poetry]
name = "qr-validator"
version = "0.2.8"
description = "The QR Validator is a Python script designed to validate QR codes and perform actions based on the QR code content. It can be used for tasks such as coupon validation and email notifications."
authors = ["Sarin C Jacob <sarin.c.jacob2001@gmail.com>"]
maintainers = ["Sarin C Jacob <sarin.c.jacob2001@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["Qr-code"] 
repository = "https://github.com/Sarin-jacob/QR-validator"

[tool.poetry.dependencies]
python = "^3.7.1"
opencv-python = ">=4.5.5.64"
pymsgbox = "^1.0.9"
playsound = ">=1.2.2"
pandas = "<=2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
qr-validator = "qr_validator:__main__"

